--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html{
 #footer {
   padding: 2% 0 1%;
   display: inline-block;
-  background-color: white;
+  background-color: #ffffff;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -13,7 +13,7 @@ html{
   border-top: 5px solid #adacac;
   position: absolute;
   bottom: 0;
-  grid-row: -1;
+  grid-row: -1 / span;
 }
 .fas, .fab {
     color: #082B69 !important;
