--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@ html{
     scroll-behavior: smooth;
 }
 
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 5% 1fr 1fr 10%;
+}
+
 #footer {
   padding: 2% 0 1%;
   display: inline-block;
@@ -21,16 +27,6 @@ html{
     font-size: 2em;
 }
 
-.wrapper{
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 10% 1fr 10%;
-}
-
-.container {
-  grid-column: 1 / -1;
-  grid-row: 2 / span 1;
-}
 
 p {
 	font-family: "Georgia", times;
@@ -56,7 +52,7 @@ h2 {
 .nav{
   vertical-align: middle;
   grid-column: 1 / -1;
-  grid-row: 1 / span 1;
+  grid-row: 1;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 1fr;
@@ -64,6 +60,7 @@ h2 {
   background-color: #ffffff;
   padding-left: 2%;
   padding-right: 2%;
+  padding-top: 10%;
   margin-bottom: -0.5%;
   border-bottom: 5px solid #adacac;
 }
@@ -86,8 +83,8 @@ nav {
   grid-column: 2 / span 1;
   grid-row: 1 / -1;
   text-align: right;
-  font-size: 1.5em;
-  padding-top: 5%;
+  /*font-size: 1.5em;*/
+  padding-bottom: 2%;
 }
 nav li{
 	padding-right: 2%;
@@ -118,18 +115,17 @@ nav a.active {
 .home_image{
 	padding-top: 2%;
 	grid-column: 1 / -1;
-	grid-row: 1 / span 1;
+	grid-row: 2;
 	text-align: center;
 }
 
 .home_text {
 	padding-top: 1%;
 	grid-column: 1 / -1;
-	grid-row: 2 / span 1;
+  grid-row: 3;
 	text-align: center;
 	line-height: 1.5em;
 }
 body{
 	background-color: #082B69;
 }
-
