--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,8 @@ html{
   text-align: center;
   width: 100%;
   border-top: 5px solid #adacac;
-  position: absolute;
+  position: sticky;
   bottom: 0;
-  grid-row: -1 / auto;
 }
 .fas, .fab {
     color: #082B69 !important;
