--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html{
 .container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 5% 1fr 1fr 10%;
+  grid-template-rows: 5% 1fr 1fr;
 }
 
 #footer {
@@ -17,7 +17,7 @@ html{
   text-align: center;
   width: 100%;
   border-top: 5px solid #adacac;
-  position: sticky;
+  position: relative;
   bottom: 0;
 }
 .fas, .fab {
@@ -134,13 +134,13 @@ body{
 }
 
 .contact_info {
-  grid-row: 2;
+  grid-row: 2 / auto;
   text-align: center;
   line-height: 1.3em;
 }
 
 .email_form {
-  grid-row: 3;
+  grid-row: 3 / auto;
   text-align: center;
 }
 
