--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html{
   text-align: center;
   width: 100%;
   border-top: 5px solid #adacac;
-  position: relative;
+  position: sticky;
   bottom: 0;
 }
 .fas, .fab {
