--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,22 @@ html{
 
 .container {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 5% 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 5% 1fr 1fr 10%;
 }
 
 #footer {
+  grid-column: 1 / -1;
+  grid-row: 4;
   padding: 2% 0 1%;
-  display: inline-block;
+  display: block;
   background-color: #ffffff;
   align-items: center;
   justify-content: center;
   text-align: center;
   width: 100%;
   border-top: 5px solid #adacac;
-  position: sticky;
+  position: absolute;
   bottom: 0;
 }
 .fas, .fab {
@@ -33,12 +35,7 @@ p {
 	color: #F6FAFF;
 }
 
-header {
-	grid-column: 1 / -1;
-	grid-row: 1;
-	position: absolute;
-	top: 3%;
-}
+
 
 h1 {
 	font-size: 1.5em;
@@ -48,20 +45,18 @@ h2 {
 	font-size: 1em;
 }
 
-.nav{
+.top_bar{
   vertical-align: middle;
   grid-column: 1 / -1;
-  grid-row: 1;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 1fr;
+  grid-row: 1 / auto;
   font-size: 0.5em;
   background-color: #ffffff;
-  padding-left: 2%;
-  padding-right: 2%;
-  padding-top: 10%;
-  margin-bottom: -0.5%;
+  padding: 3% 1% 0 1%;
   border-bottom: 5px solid #adacac;
+  margin-bottom: -5%;
+}
+header {
+  text-align: left;
 }
 
 .skip a{
@@ -79,15 +74,10 @@ h2 {
   top:0px;
 }
 nav {
-  grid-column: 2 / span 1;
-  grid-row: 1 / -1;
   text-align: right;
-  /*font-size: 1.5em;*/
-  padding-bottom: 2%;
+  font-size: 1.5em;
 }
-nav li{
-	padding-right: 2%;
-}
+
 nav ul{
   list-style-type: none;
 }
@@ -112,7 +102,7 @@ nav a.active {
 }
 
 .home_image{
-	padding-top: 2%;
+	padding-top: 10%;
 	grid-column: 1 / -1;
 	grid-row: 2;
 	text-align: center;
@@ -129,17 +119,23 @@ body{
 	background-color: #082B69;
 }
 
+/*CONTACT PAGE*/
+
 .contact_image {
   display: none;
 }
 
 .contact_info {
+  padding-top: 10%;
+  grid-column: 1 / -1;
   grid-row: 2 / auto;
   text-align: center;
   line-height: 1.3em;
 }
 
 .email_form {
+  padding-top: 5%;
+  grid-column: 1 / -1;
   grid-row: 3 / auto;
   text-align: center;
 }
